--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
-  "dependencies": {
-    "sass": "^1.68.0"
-  }
+  "name": "jet2-modal",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "devDependencies": {
+    "node-sass": "^9.0.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile-sass": "node-sass css/main.scss css/main.css --output-style compressed --watch"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
