--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile-sass": "node-sass css/main.scss css/main.css --output-style compressed --watch"
+    "compile-sass": "node-sass css/index.scss css/index.css --output-style compressed --watch"
   },
   "keywords": [],
   "author": "",
